# BackupD

./: .gitignore  README.md  pyproject.toml
backupd/: __init__.py  cli.py  config.py  db.py  engine.py  index.py  logging_setup.py  manager.py  notify.py  rclone.py  retention.py  scheduler.py  status.py  utils.py
scripts/: install.sh  sample-config.json  uninstall.sh
systemd/: backup-ui.service  backupd.service  backupd.timer
ui/: _helpers.py  app.py
ui/pages/: 1_Backup.py  2_Storage_&_Retention.py  3_Backup_Manager.py
